        www/vicidial/AST_rt_monitor_log_report.php,
        www/vicidial/Erlang_report.php: Fix for rare allowed reports issue.
  * Rewrite for php7:
    - Change: www/agc/functions.php,
        www/agc/conf_exten_check.php,
        www/agc/vdc_db_query.php.
  * Add upstream Rev. 3008:
    - Change: www/vicidial/admin_header.php: Fix for audio chooser bug on call
        menu screen.

2.25.27
  [Jörg Fring-Fürst]
  * Correct typo:
    - www/agc/vicidial.php,
      www/vicidial/admin.php.
  * Release 2.25.27 2018-06-05.

2.25.26
  [Jörg Frings-Fürst]
  * www/vicidial/AST_stat_agent1.php:
    - Add Campaign status.
  * New LICENSE.
  * New license/AGPLv3.
  * New silence files with length 1 - 10 sec..
  * New DB-Schema 1533:
    - New extras/mysql_update/mysql-1533.sql.
    - Changed extras/upgrade_2.14.sql,
      extras/MySQL_AST_CREATE_tables.sql.
  * New function AutoAnswer (2018-007):
    - Changed www/vicidial/admin.php,
      agi/agi-VDAD_ALL_inbound.agi,
      bin/ADMIN_keepalive_ALL.pl,
      bin/AST_update.pl,
      extras/MySQL_AST_CREATE_tables.sql,
      extras/mysql_update/mysql-1533.sql,
      extras/upgrade_2.14.sql,
      www/agc/vicidial.php.
  * bin/ADMIN_backup.pl:
    - Add /etc/flyingpenguin.
  * Change license to AGPLv3:
    - Changed bin/ADMIN_backup.pl,
      www/vicidial/AST_stat_agent1.php,
      agi/agi-record_prompts.agi,
      bin/ADMIN_keepalive_ALL.pl
  * Add upstream Rev. 2939:
    - Changed UPGRADE,
      extras/MySQL_AST_CREATE_tables.sql,
      extras/mysql_update/mysql-1533.sql,
      extras/upgrade_2.14.sql,
      www/agc/vicidial.php,
      www/vicidial/admin.php,
      www/vicidial/help.php: Added script_top_dispo feature.
  * Add upstream Rev. 2940:
    - Changed UPGRADE,
      extras/MySQL_AST_CREATE_tables.sql,
      extras/mysql_update/mysql-1533.sql,
      extras/upgrade_2.14.sql,
      www/vicidial/AST_VICIDIAL_hopperlist.php,
      www/vicidial/admin.php,
      www/vicidial/admin_modify_lead.php,